# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  display.py  maze_generator.py  mazegen-1.0.0-py3-none-any.whl  mypy.ini  pyproject.toml
mazegen/: generator.py
