[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generator and solver for the A-Maze-ing project"
authors = [
  {name = "Felipe Hillebrand", email = "fjose-hi@student.42porto.com"},
  {name = "Kleyton Filho", email = "kde-arru@student.42porto.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]